Add light/dark theme toggle to frontend
Introduced a theme toggle button in the header, allowing users to switch between light and dark modes. Updated script.js to handle theme switching and persistence, and extended style.css with light theme variables and component overrides for a smooth transition.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,8 +9,13 @@
   <body>
     <header class="header">
       <div class="container">
-        <h1>อัปโหลดรูปภาพ</h1>
-        <p class="subtitle">อัปโหลดรูป ดูทั้งหมด และลบได้ในคลิกเดียว</p>
+        <div class="header-bar">
+          <div class="title">
+            <h1>อัปโหลดรูปภาพ</h1>
+            <p class="subtitle">อัปโหลดรูป ดูทั้งหมด และลบได้ในคลิกเดียว</p>
+          </div>
+          <button id="themeToggle" class="btn theme-toggle" aria-label="Toggle theme">☀️ Light</button>
+        </div>
       </div>
     </header>
 
