Add image preview before upload
Introduces a preview section in the UI to show selected image and its metadata before uploading. Updates JavaScript to handle preview logic and clears preview after successful upload. Adds related styles for both dark and light themes.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,6 +29,13 @@
           </div>
         </label>
         <input id="imageInput" type="file" accept="image/*" required hidden />
+        <!-- Preview before upload -->
+        <div id="preview" class="preview hidden" aria-live="polite">
+          <img id="previewImg" alt="Image preview" />
+          <div class="meta">
+            <div id="previewInfo" class="preview-info"></div>
+          </div>
+        </div>
         <div class="actions">
           <button type="submit" class="btn primary">Upload</button>
           <span id="message" class="message" aria-live="polite"></span>
